Add -lm to Makefile

--- a/np/Makefile
+++ b/np/Makefile
@@ -10,7 +10,7 @@ TARGET = np
 all: $(TARGET)
 
 $(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
+	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c -lm
 
 clean:
 	rm -f $(TARGET)
